// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pruebas del componente <GiffGrid/> should match with snapshot 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    category
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`pruebas del componente <GiffGrid/> should show items when images are loaded with the customhook to fetch 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
    category
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="cualquier cosa"
      url="https://localhost/cualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
